[ feat ] gateway 설정

--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation ('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client') {
+		exclude group: "org.springframework.cloud", module: "spring-cloud-starter-ribbon"
+		exclude group: "com.netflix.ribbon", module: "ribbon-eureka"
+	}
+	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: "org.junit.vintage", module: "junit-vintage-engine"
+	}
 }
 
 dependencyManagement {
