--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,4 @@ logging:
   level:
     com.netflix: WARN
     org.springframework.web: WARN
-    com.optimagrowth: DEBUG
+    com.attendancecheck: DEBUG
